# icsd_toolkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
icsd_toolkit_analysis/: pyproject.toml  setup.py
icsd_toolkit_analysis/src/icsd_toolkit/analysis/: schemas.py  structure_groups.py
icsd_toolkit_client/: pyproject.toml
icsd_toolkit_client/examples/: full_downloads.ipynb
icsd_toolkit_client/src/icsd_toolkit/client/: __init__.py  client.py  enums.py  schemas.py  settings.py  utils.py
xtalxd_analysis/: pyproject.toml
xtalxd_analysis/src/xtalxd/analysis/: schemas.py  structure_groups.py
xtalxd_icsd/: pyproject.toml
xtalxd_icsd/examples/: full_downloads.ipynb
xtalxd_icsd/src/xtalxd/icsd/: __init__.py  client.py  enums.py  schemas.py  settings.py
xtalxd_mindat/: pyproject.toml  settings.py
xtalxd_mindat/src/xtalxd/mindat/: __init__.py  client.py  settings.py
